Prevent swatch selector from overflowing viewport

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -90,3 +90,14 @@ body,
     -webkit-text-fill-color: inherit;
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
